part2/2.07/manifests/ping-pong-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: exercises
  name: ping-pong-service
spec:
  type: ClusterIP
  selector:
    app: ping-pong
  ports:
    - port: 2346
      protocol: TCP
      targetPort: 3001
