part2/2.07/manifests/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: exercises
  name: postgres-service
  labels:
    app: postgres
spec:
  ports:
  - port: 5432
    name: postgres
  selector:
    app: postgres
